--- a/priv/templates/boot_win.eex
+++ b/priv/templates/boot_win.eex
@@ -1,17 +1,6 @@
 :: This batch file handles managing an Erlang node as a Windows service.
 ::
-:: Commands provided:
-::
-:: * install - install the release as a Windows service
-:: * start - start the service and Erlang node
-:: * stop - stop the service and Erlang node
-:: * restart - run the stop command and start command
-:: * uninstall - uninstall the service and kill a running node
-:: * ping - check if the node is running
-:: * console - start the Erlang release in a `werl` Windows shell
-:: * attach - connect to a running node and open an interactive console
-:: * list - display a listing of installed Erlang services
-:: * usage - display available commands
+:: Check the :usage section for information about what this script provides
 
 :: Set variables that describe the release
 @set rel_name=<%= release_name %>
@@ -26,24 +15,20 @@
   set release_root_dir=%%~fA
 )
 @set rel_dir=%release_root_dir%\releases\%rel_vsn%
-@echo rel_dir is %rel_dir%
 
 @if "%RELEASE_MUTABLE_DIR%"=="" (
   set mutable_dir=%release_root_dir%\var
 ) else (
   set mutable_dir=%RELEASE_MUTABLE_DIR
 )
-::@echo mutable_dir is %mutable_dir%
 
 @if "%RELEASE_CONFIG_DIR%"=="" (
   set config_dir=%release_root_dir%
 ) else (
   set config_dir=%RELEASE_CONFIG_DIR%
 )
-::@echo config_dir is %config_dir%
 
 @set log_dir=%mutable_dir%\log
-::@echo log_dir is %log_dir%
 
 :: Create directories which don't exist
 @if not exist %mutable_dir% mkdir %mutable_dir%
@@ -64,6 +49,9 @@
 @set escript="%bindir%\escript.exe"
 @set werl="%bindir%\werl.exe"
 @set nodetool="%release_root_dir%\bin\nodetool"
+@set consolidated_dir=%rootdir%\lib\%rel_name%-%rel_vsn%\consolidated
+@set hook_dir=%rel_dir%\hooks
+@set command_dir=%rel_dir%\commands
 
 :: Extract node type and name from vm.args
 @for /f "usebackq tokens=1-2" %%I in (`findstr /b "\-name \-sname" "%vm_args%"`) do @(
@@ -84,21 +72,51 @@
   copy "%rel_dir%\%rel_name%.boot" "%rel_dir%\start.boot" >nul
 )
 
-@if %1=="install" @goto install
-@if %1=="uninstall" @goto uninstall
-@if %1=="start" @goto start
-@if %1=="stop" @goto stop
-@if %1=="restart" @call :stop && @goto start
-@if %1=="upgrade" @goto upgrade
-@if %1=="downgrade" @goto upgrade
-@if %1=="console" @goto console
-@if %1=="ping" @goto ping
-@if %1=="describe" @goto describe
-@if %1=="attach" @goto remote_console
-@if %1=="remote_console" @goto remote_console
-@if %1=="" @goto usage
-@echo Unknown command: %1
 
+@set taskname="%1"
+@shift /1
+@set args=
+
+:parse_args
+@if "%1"=="" @goto :args_parsed
+@if "%args%"=="" (
+  @set args=%1
+) else (
+  @set args=%args% %1
+)
+@set "delim= "
+@shift /1
+@goto :parse_args
+:args_parsed
+
+@if %taskname%=="install" @goto install
+@if %taskname%=="uninstall" @goto uninstall
+@if %taskname%=="start" @goto start
+@if %taskname%=="foreground" @goto foreground
+@if %taskname%=="console" @goto console
+@if %taskname%=="stop" @goto stop
+@if %taskname%=="restart" @call :stop && @goto start
+@if %taskname%=="reboot" @call :stop && @goto start
+@if %taskname%=="reload_config" @goto reload_config
+@if %taskname%=="upgrade" @goto upgrade
+@if %taskname%=="downgrade" @goto upgrade
+@if %taskname%=="attach" @goto remote_console
+@if %taskname%=="remote_console" @goto remote_console
+@if %taskname%=="pid" @goto pid
+@if %taskname%=="ping" @goto ping
+@if %taskname%=="pingpeer" @goto pingpeer
+@if %taskname%=="escript" @goto escript
+@if %taskname%=="rpc" @goto rpc
+@if %taskname%=="rpcterms" @goto rpcterms
+@if %taskname%=="eval" @goto eval
+@if %taskname%=="command" @goto command
+@if %taskname%=="describe" @goto describe
+@if %taskname%=="" @goto usage
+@if exist "%command_dir%\%taskname%" (
+  @"%command_dir%\%taskname%" %*
+) else (
+  @echo Unknown command: %taskname%
+)
 @goto :eof
 
 :: Find the ERTS dir
@@ -191,13 +209,13 @@
 @echo uninstall                           # uninstalls the release service
 @echo start                               # starts the service
 @echo start_boot                          # not implemented
-@echo foreground                          # not implemented
+@echo foreground                          # start the release in the foreground
 @echo console                             # run the release in a local shell
-@echo console_clean                       # run the release in a local shell
+@echo console_clean                       # not implemented
 @echo stop                                # stops the service
 @echo restart                             # restarts the release service
-@echo reboot                              # not implemented
-@echo reload_config                       # not implemented
+@echo reboot                              # alias for restart on Windows
+@echo reload_config                       # reload the current system's configuration from disk
 @echo.
 @echo Upgrades
 @echo =====================
@@ -208,35 +226,39 @@
 @echo =====================
 @echo attach                              # alias for remote_console on Windows
 @echo remote_console                      # open a remote console connected to the release
-@echo pid                                 # not implemented
-@echo ping                                # ping the current release service
-@echo pingpeer ^<peer^>                     # not implemented
-@echo escript ^<file^>                      # not implemented
-@echo rpc ^<mod^> ^<fun^> ^[^<args..^>^]          # not implemented
-@echo rpcterms ^<mod^> ^<fun^> ^[^<expr^>^]       # not implemented
-@echo eval ^<expr^>                         # not implemented
-@echo command ^<mod^> ^<fun^> ^[^<args..^>^]      # not implemented
+@echo pid                                 # get the process id of the running release
+@echo ping                                # ping the current release service, pong is returned if ok
+@echo pingpeer ^<peer^>                     # check if a peer node is running, pong is returned if ok
+@echo escript ^<file^>                      # execute an escript
+@echo rpc ^<mod^> ^<fun^> ^[^<args..^>^]          # execute an RPC call using the given MFA
+@echo rpcterms ^<mod^> ^<fun^> ^[^<expr^>^]       # execute an RPC call using the given Erlang expr for args
+@echo eval ^<expr^>                         # execute the given Erlang expr on the running node
+@echo command ^<mod^> ^<fun^> ^[^<args..^>^]      # execute the given module/function in a clean VM
 @echo describe                            # list details about the release
+@echo.
+@echo Custom Commands
+@echo ======================
+@for %%i in (%command_dir%\*.d\*.bat) do (
+  echo %%~ni
+)
 @goto :eof
-
 
 :: Install the release as a Windows service
 :: or install the specified version passed as argument
 :install
-@set args=%erl_opts% -setcookie %cookie% ++ ^
+@set service_args=%erl_opts% -setcookie %cookie% ++ ^
        -rootdir "%rootdir%" ^
        -reldir "%release_root_dir%\releases"
-@echo reldir is %release_root_dir%\releases
 @set start_erl=%erts_dir%\bin\start_erl.exe
 @set description=Erlang node %node_name% in %rootdir%
-@if "" == "%2" (
+@if "" == "%args%" (
   :: Install the service
   %erlsrv% add %service_name% ^
             -c "%description%" ^
             %node_type% "%node_name%" ^
             -w "%rootdir%\var" ^
             -m "%start_erl%" ^
-            -args "%args%" ^
+            -args "%service_args%" ^
             -debugtype new ^
             -stopaction "init:stop()."
 ) else (
@@ -253,27 +275,65 @@
 
 :: Start the Windows service
 :start
+@call :pre_configure_hooks
+@call :pre_start_hooks
 @%erlsrv% start %service_name%
+@call :post_start_hooks
 @goto :eof
 
 :: Stop the Windows service
 :stop
+@call :pre_stop_hooks
 @%erlsrv% stop %service_name%
+@call :post_stop_hooks
 @goto :eof
 
 :: Upgrade this release
 :upgrade
-@if "" == "%2" (
+@if "" == "%args%" (
   echo Missing version argument
-  echo Usage: %rel_name% %1 {version}
+  echo Usage: %rel_name% %taskname% {version}
   set ERRORLEVEL=1
   exit /b %ERRORLEVEL%
 )
-@%escript% "%rootdir%/bin/install_upgrade.escript" "%rel_name%" "%node_name%" "%cookie%" "%2"
+@set source_version=%rel_vsn%
+@set target_version=%args%
+:: Unpack
+@%escript% "%root_dir%\bin\release_utils.escript" ^
+    unpack_release %rel_name% "%node_type%" "%node_name%" "%cookie%" "%target_version%"
+@if %ERRORLEVEL% GEQ 1 exit %ERRORLEVEL%
+:: Update env
+@set rel_vsn=%target_version%
+@set rel_dir=%release_root_dir\releases\%target_version%
+:: TODO: init_configs
+if exists "%rel_dir%\sys.config.bak" do (
+  @move /Y "%rel_dir%\sys.config.bak" "%rel_dir%\sys.config"
+)
+if exists "%rel_dir%\vm.args.bak" do (
+  @move /Y "%rel_dir%\vm.args.bak" "%rel_dir%\vm.args"
+)
+@copy /B /Y "%rel_dir%/sys.config" "%rel_dir%\sys.config.bak"
+@copy /B /Y "%rel_dir%/vm.args" "%rel_dir%\vm.args.bak"
+@copy /B /Y "%sys_config" "%rel_dir%/sys.config"
+@copy /B /Y "%vm_args%" "%rel_dir%/vm.args"
+:: Run pre hooks
+@call :pre_configure_hooks
+@call :pre_upgrade_hooks
+:: Perform upgrade
+@%escript% "%rootdir%/bin/release_utils.escript" ^
+    install_release "%rel_name%" "%node_type%" "%node_name%" "%cookie%" "%target_version%"
+@if %ERRORLEVEL% GEQ 1 exit %ERRORLEVEL%
+:: Cleanup
+@move /Y "%rel_dir%\sys.config.bak" "%rel_dir%\sys.config"
+@move /Y "%rel_dir%\vm.args.bak" "%rel_dir%\vm.args"
+:: Run post hooks
+@call :post_upgrade_hooks
 @goto :eof
 
 :: Start a console
 :console
+@call :pre_configure_hooks
+@call :pre_start hooks
 @start "%rel_name% console" %werl% -boot "%boot_script%" ^
        -config "%sys_config%"  ^
        -args_file "%vm_args%" ^
@@ -281,14 +341,141 @@
        -extra --no-halt +iex
 @goto :eof
 
+:: Start the release in the foreground
+:foreground
+@call :pre_configure_hooks
+@call :pre_start_hooks
+@set EMU=beam
+@set PROGNAME=%~n0
+@start /B "%erl%" -noshell -noinput +Bd ^
+       -boot "%boot_script%" ^
+       -boot_var ERTS_LIB_DIR "%erts_dir%\..\lib" ^
+       -env ERL_LIBS "%release_root_dir%\lib%" ^
+       -pa "%consolidated_dir%" ^
+       -args_file "%vm_args%" ^
+       -config "%sys_config%" ^
+       %erl_opts% ^
+       -extra %extra_opts%
+@call :set_pid
+@call :post_start_hooks
+
+:wait_for_exit
+@tasklist /FI "PID eq %pid%" | find /I "erl.exe"
+@if %ERRORLEVEL% geq 1 (
+  :: Process has shutdown
+  @call :post_stop_hooks
+) else (
+  @sleep 5
+  @goto :wait_for_exit
+)
+@goto :eof
+
 :: Ping the running node
 :ping
 @%escript% %nodetool% ping %node_type% "%node_name%" -setcookie "%cookie%"
 @goto :eof
 
+:: Ping a peer node
+:: Ping a peer node
+:pingpeer
+@if "%args"=="" (
+  echo "Peer name is required!"
+  exit 1
+) else (
+  %escript% %nodetool% ping %node_type% "%args%" -setcookie "%cookie%"
+)
+@goto :eof
+
+:: Execute an escript
+:escript
+@%escript% %args%
+@goto :eof
+
+:: Execute an RPC command
+:rpc
+@call :ping>NUL
+@if %ERRORLEVEL% GEQ 1 exit %ERRORLEVEL%
+@%escript% %nodetool% rpc %node_type% %node_name% -setcookie "%cookie%" %args%
+@goto :eof
+
+:: Execute an RPC command where args are expressed
+:: in the form of an Erlang expression
+:rpcterms
+@call :ping>NUL
+@if %ERRORLEVEL% GEQ 1 exit %ERRORLEVEL%
+@%escript% %nodetool% rpcterms %node_type% %node_name% -setcookie "%cookie%" %args%
+@goto :eof
+
+:: Eval an expression on the running node
+:eval
+@call :ping>NUL
+@if %ERRORLEVEL% GEQ 1 exit %ERRORLEVEL%
+@%escript% %nodetool% eval %node_type% %node_name% -setcookie "%cookie%" %args%
+@goto :eof
+
+
+:: Execute a command in a clean Erlang VM
+:command
+@for /f "tokens=1-2*" %%a in ("%args%") do (
+  @set module=%%a
+  @set function=%%b
+  @set command_args=%%c
+)
+@%erl% -boot_var ERTS_LIB_DIR "%erts_dir%\..\lib" ^
+       -hidden -noshell -boot start_clean ^
+       -pa "%consolidated_dir%" ^
+       -s %module% %function% -s init stop
+       -extra %command_args%
+@goto :eof
+
+:: Get the process id of the running node
+:pid
+@call :ping>NUL
+@if %ERRORLEVEL% GEQ 1 exit %ERRORLEVEL%
+@%escript% %nodetool% eval %node_type% %node_name% -setcookie "%cookie%" "erlang:list_to_integer(os:getpid())."
+@goto :eof
+
+:set_pid
+@call :ping>NUL
+@if %ERRORLEVEL% GEQ 1 exit %ERRORLEVEL%
+@set get_pid_cmd=%escript% %nodetool% eval %node_type% %node_name% -setcookie "%cookie%" "erlang:list_to_integer(os:getpid()).'
+@for /f "delims=" %%i in (`%%get_pid_cmd%%`) do set pid=%%i
+@goto :eof
+
+:: Reload the running configuration
+:reload_config
+@call :ping>NUL
+@if %ERRORLEVEL% GEQ 1 exit %ERRORLEVEL%
+@call :pre_configure_hooks
+@%escript% %nodetool% reload_config %node_type% %node_name% -setcookie "%cookie%" "%sys_config%"
+@goto :eof
+
 :: Describe this release
 :describe
+@echo Service Information
+@echo =====================
 @%erlsrv% list %service_name%
+@echo.
+@echo Release Metadata
+@echo =====================
+@echo ERTS                %erts_vsn%
+@echo Release Directory   %rel_dir%
+@echo Config File         %sys_config%
+@echo Args File           %vm_args%
+@echo Name Type           %node_type%
+@echo Node Name           %node_name%
+@echo Node Cookie         %cookie%
+@echo Extra Opts          %erl_opts%
+@echo.
+@echo Hooks:
+@for %%i in (%hook_dir%\*.d\*.bat) do (
+  echo %%i
+)
+@echo.
+@echo Commands:
+@for %%i in (%command_dir%\*.d\*.bat) do (
+  echo %%i
+)
 @goto :eof
 
 :: Remote shell to a running node
@@ -299,4 +486,41 @@
 @start "%node_name% attach" %werl% -hidden -noshell -boot "%clean_boot_script%" ^
        -user Elixir.IEx.CLI %node_type% %id% -setcookie %cookie% ^
        -extra --no-halt +iex -%node_type% %id% --cookie %cookie% --remsh %node_name%
+@goto :eof
+
+:: Hook helpers
+:execute_hooks
+@for /r "%hook_dir%\%1.d" %%f in (*.bat) do (
+  @echo Running %1 hook: %%f
+  %%f
+  @if %ERRORLEVEL% GEQ 1 exit %ERRORLEVEL%
+)
+@goto :eof
+
+:pre_configure_hooks
+@call :execute_hooks pre_configure
+@goto :eof
+
+:pre_start_hooks
+@call :execute_hooks pre_start
+@goto :eof
+
+:post_start_hooks
+@call :execute_hooks post_start
+@goto :eof
+
+:pre_stop_hooks
+@call :execute_hooks pre_stop
+@goto :eof
+
+:post_stop_hooks
+@call :execute_hooks post_stop
+@goto :eof
+
+:pre_upgrade_hooks
+@call :execute_hooks pre_upgrade
+@goto :eof
+
+:post_upgrade_hooks
+@call :execute_hooks post_upgrade
 @goto :eof
