--- a/priv/templates/boot.eex
+++ b/priv/templates/boot.eex
@@ -134,6 +134,33 @@ escript() {
     "$ERTS_DIR/bin/escript" "$ROOTDIR/$scriptpath" "$@"
 }
 
+## Run hooks for one of the configured startup phases
+run_hooks() {
+  case $1 in
+    pre_configure)
+      _run_hooks_from_dir "$PRE_CONFIGURE_HOOKS"
+      ;;
+    pre_start)
+      _run_hooks_from_dir "$PRE_START_HOOKS"
+      ;;
+    pre_stop)
+      _run_hooks_from_dir "$PRE_STOP_HOOKS"
+      ;;
+    post_start)
+      _run_hooks_from_dir "$POST_START_HOOKS"
+      ;;
+    post_stop)
+      _run_hooks_from_dir "$POST_STOP_HOOKS"
+      ;;
+    pre_upgrade)
+      _run_hooks_from_dir "$PRE_UPGRADE_HOOKS"
+      ;;
+    post_upgrade)
+      _run_hooks_from_dir "$POST_UPGRADE_HOOKS"
+      ;;
+  esac
+}
+
 # Private. Load target cookie, either from vm.args or $HOME/.cookie
 _load_cookie() {
     COOKIE_ARG="$(grep '^-setcookie' "$VMARGS_PATH" || true)"
@@ -414,8 +441,8 @@ case "$1" in
         RUN_PARAM="$@"
 
         _check_cookie
-        _run_hooks_from_dir "$PRE_CONFIGURE_HOOKS"
-        _run_hooks_from_dir "$PRE_START_HOOKS"
+        run_hooks pre_configure
+        run_hooks pre_start
 
         # Set arguments for the heart command
         set -- "$SCRIPT_DIR/$REL_NAME" "$HEART_OPTION"
@@ -431,12 +458,12 @@ case "$1" in
         env $RUN_ERL_ENV "$BINDIR/run_erl" -daemon "$PIPE_DIR" "$RUNNER_LOG_DIR" \
                           "$(_start_command)"
 
-        _run_hooks_from_dir "$POST_START_HOOKS"
+        run_hooks post_start
         ;;
 
     stop)
         _check_cookie
-        _run_hooks_from_dir "$PRE_STOP_HOOKS"
+        run_hooks pre_stop
         # Wait for the node to completely stop...
         PID="$(get_pid)"
         if ! nodetool "stop"; then
@@ -446,13 +473,13 @@ case "$1" in
         do
             sleep 1
         done
-        _run_hooks_from_dir "$POST_STOP_HOOKS"
+        run_hooks post_stop
         ;;
 
     restart)
         _check_cookie
-        _run_hooks_from_dir "$PRE_CONFIGURE_HOOKS"
-        _run_hooks_from_dir "$PRE_START_HOOKS"
+        run_hooks pre_configure
+        run_hooks pre_start
         ## Restart the VM without exiting the process
         if ! nodetool "restart"; then
             exit 1
@@ -461,8 +488,8 @@ case "$1" in
 
     reboot)
         _check_cookie
-        _run_hooks_from_dir "$PRE_CONFIGURE_HOOKS"
-        _run_hooks_from_dir "$PRE_START_HOOKS"
+        run_hooks pre_configure
+        run_hooks pre_start
         ## Restart the VM completely (uses heart to restart it)
         if ! nodetool "reboot"; then
             exit 1
@@ -588,9 +615,9 @@ case "$1" in
         cp "$SYS_CONFIG_PATH" "$REL_DIR/sys.config"
         cp "$VMARGS_PATH" "$REL_DIR/vm.args"
         # Make sure any pre-configuration hooks are run
-        _run_hooks_from_dir "$PRE_CONFIGURE_HOOKS"
+        run_hooks pre_configure
         # Run any pre-upgrade tasks
-        _run_hooks_from_dir "$PRE_UPGRADE_HOOKS"
+        run_hooks pre_upgrade
 
         "$BINDIR/escript" "$ROOTDIR/bin/release_utils.escript" \
              "install_release" "$REL_NAME" "$NAME_TYPE"  "$NAME" "$COOKIE" "$TARGET_VERSION"
@@ -600,7 +627,7 @@ case "$1" in
         mv "$REL_DIR/vm.args.bak" "$REL_DIR/vm.args"
 
         # Run any post-upgrade hooks
-        _run_hooks_from_dir "$POST_UPGRADE_HOOKS"
+        run_hooks post_upgrade
 
         ;;
     unpack)
@@ -661,8 +688,8 @@ case "$1" in
         # Start the VM, executing pre_start hook along
         # the way. We can't run the post_start hook because
         # the console will crash with no TTY attached
-        _run_hooks_from_dir "$PRE_CONFIGURE_HOOKS"
-        _run_hooks_from_dir "$PRE_START_HOOKS"
+        run_hooks pre_configure
+        run_hooks pre_start
 
         # Build an array of arguments to pass to exec later on
         # Build it here because this command will be used for logging.
@@ -713,8 +740,8 @@ case "$1" in
         _check_cookie
 
         # Start the VM, executing pre and post start hooks
-        _run_hooks_from_dir "$PRE_CONFIGURE_HOOKS"
-        _run_hooks_from_dir "$PRE_START_HOOKS"
+        run_hooks pre_configure
+        run_hooks pre_start
 
         # Build an array of arguments to pass to exec later on
         # Build it here because this command will be used for logging.
@@ -737,9 +764,9 @@ case "$1" in
 
         "$@" -- ${1+$ARGS} &
         __bg_pid=$!
-        _run_hooks_from_dir "$POST_START_HOOKS"
+        run_hooks post_start
         wait $__bg_pid
-        _run_hooks_from_dir "$POST_STOP_HOOKS"
+        run_hooks post_stop
         ;;
     rpc)
         _check_cookie
@@ -822,7 +849,7 @@ case "$1" in
             exit 1
         fi
 
-        _run_hooks_from_dir "$PRE_CONFIGURE_HOOKS"
+        run_hooks pre_configure
 
         shift
         nodetool "reload_config" "$SYS_CONFIG_PATH"
