Add templatable signal handler
* set signal_handler key now exists
* added doc for it

--- a/priv/templates/boot_loader.eex
+++ b/priv/templates/boot_loader.eex
@@ -16,7 +16,7 @@ _cleanup() {
     trap - HUP INT TERM QUIT EXIT USR1 USR2
     echo ""
     echo "Shutting down.."
-    "$RELEASES_DIR/$REL_VSN/$REL_NAME.sh" rpc init stop
+    "$RELEASES_DIR/$REL_VSN/$REL_NAME.sh" <%= signal_handler %>
     wait $__pid
 }
 
